[project]
name = "mamba_ssm"
description = "Mamba state-space model"
readme = "README.md"
authors = [
    { name = "Tri Dao", email = "tri@tridao.me" },
    { name = "Albert Gu", email = "agu@cs.cmu.edu" }
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }  # Include a LICENSE file in your repo
keywords = ["cuda", "pytorch", "state-space model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]
dependencies = [
    "torch",
    "triton",
    "ninja",
    "einops",
    "transformers",
    "packaging",
    "setuptools>=61.0.0",
]
[project.urls]
Repository = "https://github.com/state-spaces/mamba"

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d>=1.2.0"
]
dev = [
    "pytest"
]


[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
